scripts/nullaway/annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8.txt
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/VertexList.java:57: error: [NullAway] dereferenced expression tail is @Nullable
            tail.next = vtx;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/VertexList.java:71: error: [NullAway] dereferenced expression tail is @Nullable
            tail.next = vtx;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/Vertex.java:69: error: [NullAway] initializer method does not guarantee @NonNull field face (line 64) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Vertex() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/Vertex.java:76: error: [NullAway] initializer method does not guarantee @NonNull field face (line 64) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Vertex(double x, double y, double z, int idx) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/Face.java:68: error: [NullAway] initializer method does not guarantee @NonNull field he0 (line 52) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Face() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/Face.java:88: error: [NullAway] dereferenced expression hePrev is @Nullable
        hePrev.setNext(face.he0);
              ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/Face.java:195: error: [NullAway] dereferenced expression hedgeMax is @Nullable
            Point3d p2 = hedgeMax.head().pnt;
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/HalfEdge.java:75: error: [NullAway] initializer method does not guarantee @NonNull fields next (line 54), prev (line 59), opposite (line 64) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public HalfEdge(Vertex v, Face f) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/HalfEdge.java:80: error: [NullAway] initializer method does not guarantee @NonNull fields next (line 54), prev (line 59), opposite (line 64), vertex (line 44), face (line 49) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public HalfEdge() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/HalfEdge.java:112: error: [NullAway] assigning @Nullable expression to @NonNull field
        prev = edge;
             ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/HalfEdge.java:169: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return prev != null ? prev.vertex : null;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/HalfEdge.java:178: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return opposite != null ? opposite.face : null;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/FaceList.java:57: error: [NullAway] dereferenced expression tail is @Nullable
            tail.next = vtx;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3DTest.java:591: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            test(coords, null);
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3DTest.java:628: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            test(coords, null);
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3DTest.java:634: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    test(coords, null);
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3DTest.java:642: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    test(coords, null);
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3DTest.java:650: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    test(coords, null);
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3DTest.java:658: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                    test(coords, null);
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3D.java:1119: error: [NullAway] passing @Nullable parameter 'hedgeSidePrev' where @NonNull is required
        hedgeSideBegin.next.setOpposite(hedgeSidePrev);
                                        ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3D.java:1119: error: [NullAway] dereferenced expression hedgeSideBegin is @Nullable
        hedgeSideBegin.next.setOpposite(hedgeSidePrev);
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3D.java:1124: error: [NullAway] dereferenced expression claimed.first() is @Nullable
            Face eyeFace = claimed.first().face;
                                          ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url72c32f3c54_Quickhull3d_quickhull3d_tgz-pJ8-com_github_quickhull3d_SimpleExampleJ8/src/com/github/quickhull3d/QuickHull3D.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
22 errors
